--- a/BlazorApp/Pages/ViewProfile.razor
+++ b/BlazorApp/Pages/ViewProfile.razor
@@ -24,9 +24,9 @@ else
                 }
                 <h4 class="card-body">Rating</h4>
                 <h4 class="card-body">Description</h4>
-                <h5 class="card-body" style="border: solid; border-width: thick; border-color: #0b5ed7"> @tutor.Description</h5>
+                <p class="card-body" style="border: solid; border-width: thick; border-color: #0b5ed7; height: 100px; overflow-y: auto;"> @tutor.Description</p>
             </div>
-            <button class="messagebtn" @onclick="(() => MessageAsync(username))">Message</button>
+            <button class="btn btn-outline-primary" @onclick="(() => MessageAsync(username))">Message</button>
         </div>
     </div>
 }
@@ -51,6 +51,6 @@ else
     }
     private async Task MessageAsync(string userName)
     {
-        navMgr.NavigateTo($"/MessagePlatform");
+        navMgr.NavigateTo($"/MessagePlatform/{userName}");
     }
 }
