--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -1,8 +1,10 @@
 ﻿@page "/"
 
 <PageTitle>Index</PageTitle>
+<div class="container">
+    <img src="icons/giphy.gif"/>
+</div>
 
-<h1> <span class="badge bg-secondary align-content-center">Tutoring4You Homepage</span></h1>
 
 @code{}
 
