--- a/BlazorApp/Shared/MainLayout.razor.css
+++ b/BlazorApp/Shared/MainLayout.razor.css
@@ -9,12 +9,12 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(65, 159, 23) 0%, #2D6914FF 70%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    background-color: #419f17;
+    border-bottom: 1px solid #33850a;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
