Update account + authorize on pages

--- a/BlazorApp/App.razor
+++ b/BlazorApp/App.razor
@@ -3,7 +3,7 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                   <h1> <span class="badge bg-secondary align-content-center">Please Create an Account</span></h1>
+                   <h1> <span class="badge bg-secondary align-content-center">Please Create an Account or Log In</span></h1>
                 </NotAuthorized>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
