--- a/BlazorApp/Pages/BecomeTutor.razor
+++ b/BlazorApp/Pages/BecomeTutor.razor
@@ -6,6 +6,7 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject IUserService userService
 @inject NavigationManager navMgr
+@attribute [Authorize]
 <h1>Become a Tutor</h1>
 <p>Please fill out the information below to become a tutor:</p>
 
