--- a/BlazorApp/Pages/MessagePlatform.razor
+++ b/BlazorApp/Pages/MessagePlatform.razor
@@ -9,6 +9,7 @@
 @inject IUserService userService;
 @inject IMessageService messageService;
 @inject NavigationManager navMgr
+@attribute [Authorize]
 
 
 <h1> <span class="badge bg-secondary align-content-center">Message Platform</span></h1>
