--- a/BlazorApp/Shared/MainLayout.razor.css
+++ b/BlazorApp/Shared/MainLayout.razor.css
@@ -9,12 +9,12 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(65, 159, 23) 0%, #2D6914FF 70%);
+    background-image: linear-gradient(180deg, rgb(47, 182, 141) 0%, #4B4B4BFF 70%);
 }
 
 .top-row {
-    background-color: #419f17;
-    border-bottom: 1px solid #33850a;
+    background-color: #2fb68d;
+    border-bottom: 1px solid #4b4b4b;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
