--- a/BlazorApp/Pages/Buttons.razor
+++ b/BlazorApp/Pages/Buttons.razor
@@ -7,7 +7,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <button class="btn btn-outline-primary mx-2" @onclick="Message"> Message </button>
+        <button class="btn btn-outline-light mx-2" @onclick="Message"> Message </button>
         <img class="image mx-2 my-2" src="icons/user.png" alt="image" style="width: 30px; height: 30px;" @onclick="Account">
     </Authorized>
 </AuthorizeView>
